--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,13 @@
     height: 50px;
 }
 
+.calc-buttons{
+    height: 300px;
+    width: auto;
+    margin: 10px;
+    border: 2px solid black;
+}
+
 .currentOperation{
     text-align: right;
 }
