--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,11 @@
     width: auto;
     margin: 10px;
     height: 50px;
+    color: white;
 }
 
 .calc-buttons{
-    height: 300px;
+    height: 310px;
     width: auto;
     margin: 10px;
     border: 2px solid black;
@@ -21,4 +22,20 @@
 
 .currentOperation{
     text-align: right;
+}
+
+.num{
+    margin: 20px;
+}
+
+.op{
+    margin: 20px;
+}
+
+.clear{
+    margin: 20px;
+}
+
+body {
+    background:url('0.gif') ;
 }
